# openframeworks_android_template

./: .gitignore  settings.gradle
app/: AndroidManifest.xml  build.gradle
app/java/cc/openframeworks/MainActivity/: OFActivity.java
app/res/layout/: main_layout.xml
app/res/values/: strings.xml
app/src/: CMakeLists.txt  ofApp.cpp
gradle/wrapper/: gradle-wrapper.properties
